--- a/css/menu.css
+++ b/css/menu.css
@@ -13,13 +13,16 @@ a, a:hover, a:active {text-decoration: none; outline: none; color: #222; color: 
 
 header {width: 100%;}
 header .header {width: 100%; height: 100px; background: #999;}
-header .gnbArea {position: fixed; left: 0; top: 0; width: 100%; height:100%; z-index: 9999;}
-header .gnbArea .gnb {width: 300px; height: 100%; background: #666;}
+header .gnbArea {position: fixed; left: -300px; top: 0; width: 100%; height:100%; z-index: 9999; transition: all 0.3s;}
+header .gnbArea .gnb {width: 300px; height: 100%; background: royalblue;}
 header .gnbArea .gnb dl dt {height: 50px; line-height: 50px; padding: 0 20px;}
 header .gnbArea .gnb dl dd li a{display: block; width: 100%; height: 50px; line-height: 50px; padding: 0 50px;}
 header .gnbArea .gnb dl dd li a:hover {background: #eee;}
-header .gnbArea .gnb-closeBtn {position: absolute; top: 0; right: -70px; width: 70px; height: 70px; background: #666; cursor: pointer;}
-header .gnbArea .gnb-dimmed {position: fixed; top: 0; left: 0; z-index: -1; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3);}
+header .gnbArea .gnb-closeBtn {position: absolute; top: 0; left: 300px; width: 70px; height: 70px; background: royalblue; cursor: pointer;}
+header .gnbArea .gnb-dimmed {display: none;}
+
+header .gnbArea.on {left: 0;}
+header .gnbArea.on .gnb-dimmed {display: block; position: fixed; top: 0; left: 0; z-index: -1; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3);}
 header .nav {position: fixed; top: -100px; width: 100%; height: 100px; background: #ddd; transition: all 0.5s;}
 header .nav.active {top: 0px;}
 
